PYIC-6973: Update Passport VC fixtures